--- a/Notebooks/Flowability Regression.ipynb
+++ b/Notebooks/Flowability Regression.ipynb
@@ -9,6 +9,19 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import os\n",
+    "import sys\n",
+    "module_path = os.path.abspath(os.path.join('..'))\n",
+    "if module_path not in sys.path:\n",
+    "    sys.path.append(module_path)"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -18,7 +31,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
